# jinjanator-plugins

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
changelog.d/: +api23.4.breaking.md  +features.adding.md  +format_options.changing.md  +unit_tests.changing.md  1.adding.md  2.adding.md  towncrier_template.md.jinja
plugin_example/: jinjanator_plugin_example.py  pyproject.toml
plugin_example/tests/: test_plugin.py  test_plugin_discovery.py  test_plugin_discovery_entrypoint.py
src/jinjanator_plugins/: __init__.py
tests/: test_format_error_output.py
workflow-support/: ci_paths.yml  lint_paths.yml
